add the swagger annotations pour la documentation
