# app/Http/Controllers/Api/V1/CourseController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api\V1;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 use App\Services\CourseService;
+use OpenAPI\Annotations as OS;
 
 class CourseController extends Controller
 {
@@ -15,16 +16,66 @@ class CourseController extends Controller
         $this->courseService = $courseService;
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/v1/courses",
+     *     summary="Get a list of courses",
+     *     tags={"Course"},
+     *     @OA\Response(response=200, description="Successful operation"),
+     *     @OA\Response(response=400, description="Invalid request")
+     * )
+     */
     public function index()
     {
         return response()->json($this->courseService->listCourses());
     }
 
+
+    /**
+     * @OA\Get(
+     *     path="/api/v1/courses/{id}",
+     *     summary="Get a specific course",
+     *     tags={"Course"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the course",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response=200, description="Course found"),
+     *     @OA\Response(response=404, description="Course not found")
+     * )
+     */
     public function show($id)
     {
         return $this->courseService->getCourse($id);
     }
 
+
+        /**
+     * @OA\Post(
+     *     path="/api/v1/courses",
+     *     summary="Create a new course",
+     *     tags={"Course"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name", "description", "duration", "level", "status", "category_id"},
+     *             @OA\Property(property="name", type="string", example="Introduction to PHP"),
+     *             @OA\Property(property="description", type="string", example="Learn the basics of PHP"),
+     *             @OA\Property(property="duration", type="integer", example=120),
+     *             @OA\Property(property="level", type="string", example="Beginner"),
+     *             @OA\Property(property="status", type="string", example="open"),
+     *             @OA\Property(property="category_id", type="integer", example=1),
+     *             @OA\Property(property="sub_category_id", type="integer", example=2),
+     *             @OA\Property(property="tags", type="array", @OA\Items(type="integer"), example={1, 2})
+     *         )
+     *     ),
+     *     @OA\Response(response=201, description="Course created successfully"),
+     *     @OA\Response(response=400, description="Invalid input")
+     * )
+     */
     public function store(Request $request)
     {
         $data = $request->validate([
